# parley

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  guard-live-endpoints.sh  new-config.md  new-experiment.md  portfolio-manager.md  post-cycle-snapshot.sh  pyproject.toml  risk-manager.md  run-cycle.md  schema.sql  settings.json  status.md
.claude/: settings.json
.claude/agents/: execution-trader.md  quant.md  research-analyst.md
.claude/commands/: backtest.md  postmortem.md
.claude/hooks/: guard-live-endpoints.sh  post-cycle-snapshot.sh  pre-order-risk-check.sh  session-start-check.sh
desk/: __init__.py  backtest.py  broker.py  cycle.py  db.py  execution.py  indicators.py  market_data.py  risk_engine.py  setup.py
docs/: quickstart.md
tests/: conftest.py  test_broker.py  test_execution.py  test_indicators.py  test_integration_cycle.py  test_market_data.py  test_plan_validation.py  test_risk_engine.py
