[project]
name = "parley"
version = "0.1.0"
description = "A multi-agent crypto trading desk where research, risk, and execution parley each cycle."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Parley contributors" }]
keywords = ["trading", "crypto", "multi-agent", "llm", "research", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Database
    "psycopg[binary,pool]>=3.2.0",
    "sqlalchemy>=2.0.30",
    # Exchange + market data
    "ccxt>=4.3.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    # Data & indicators
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b0",
    # Runtime
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "tenacity>=8.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Utilities
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-python-dateutil",
    "pandas-stubs",
]

[project.urls]
Homepage = "https://github.com/YOUR-ORG/parley"
Documentation = "https://github.com/YOUR-ORG/parley#readme"
Repository = "https://github.com/YOUR-ORG/parley"
Issues = "https://github.com/YOUR-ORG/parley/issues"

[project.scripts]
parley = "desk.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["desk"]

# ----------------------------------------------------------------------------
# Ruff
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PL",  # pylint
    "RUF", # ruff-specific
]
ignore = [
    "PLR0913", # too-many-arguments (trading code often has many params)
    "PLR2004", # magic numbers (ubiquitous in indicator code)
    "E501",    # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------------------------------------------------------
# Mypy
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["ccxt.*", "pandas_ta.*"]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "smoke: end-to-end smoke tests that hit the testnet (slow, require .env)",
    "integration: multi-component integration tests",
    "unit: pure unit tests, no I/O",
]
filterwarnings = [
    "ignore::DeprecationWarning:pandas_ta.*",
]

[tool.coverage.run]
source = ["desk"]
omit = ["tests/*", "desk/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
